<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2007 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!--  -->
    <!-- Label shown on launcher icon -->
    <!-- Label for the this application displayed on-screen when this application must be represented to the user. -->
    <string name="app_name">Clock time</string>

    <!-- TODO: That bitch doesn't want to get reference... this R address is returned instead :( -->
    <string name="banner_ad_unit_id" tools:ignore="MissingTranslation">ca-app-pub-3940256099942544/6300978111</string>

    <!-- Label on the main screen control used to set alarm when there is already an existing alarm [CHAR LIMIT=30] -->
    <string name="control_set_alarm_with_existing"><xliff:g id="time">%s</xliff:g></string>

    <!-- Settings strings -->
    <!-- Header for a Clock Dream Setting referring to choosing analog or digital style -->
    <string name="clock_style">Style</string>

    <!--
         Entries listed in the ListPreference when invoking the clock style
         preference.
    -->
    <string-array name="clock_style_entries2">
        <item>Analog</item>
        <item>Digital (hours thick)</item>
        <item>Digital</item>
    </string-array>

    <!-- Header for a Clock Dream Setting -->
    <string name="clock_size">Size</string>

    <!--
     Entries listed in the ListPreference when invoking the clock size
     preference.
-->
    <string-array name="clock_size_entries">
        <item>Tiny</item>
        <item>Smaller</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X-Large</item>
        <item>2X-Large</item>
    </string-array>


    <!-- Header for a Clock Dream Setting -->
    <string name="clock_settings_title">Clock Settings</string>
    <string name="clock_color">Color</string>


    <!-- Select background image -->
    <string name="background_image">Background Image</string>
    <string name="wakeup_settings_title">Wakeup Settings</string>
    <string name="wakeup_image">Wakeup Image</string>
    <string name="adjust_wakeup_full_brightness">Time before the alarm, at which the screen has 100% brightness in minutes</string>
    <string name="adjust_wakeup_start_time">Time before the alarm, at which the screen starts to increase the brightness in minutes</string>
    <string name="wakeup_start_time_title">Light wakeup begin</string>
    <string name="wakeup_full_brightness_title">Light wakeup full brightness</string>
    <string name="alarm_hide_until_hours_title">Hide alarms in far in the future</string>
    <string name="alarm_hide_until_hours_summary">Hide alarms more than selected hours away. Set 0 to show all alarms.</string>


    <!--
    Entries listed in the ListPreference when invoking the clock color
    preference.
-->
    <string-array name="clock_color_entries">
        <item>White</item>
        <item>Gray</item>
        <item>Coral Red</item>
        <item>Red</item>
        <item>Orange</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Black/Hide</item>
    </string-array>



    <!-- Header for a Clock Dream Setting -->
    <string name="alarm_clock_settings_title">Alarm Settings</string>
    <string name="alarm_color">Alarm Color</string>
    <string name="alarm_clock_size">Alarm Size</string>

    <!-- Header for a Clock Dream Setting -->
    <string name="date_clock_settings_title">Date Settings</string>
    <string name="date_color">Date Color</string>
    <string name="date_clock_size">Date Size</string>


    <string name="fonts_selection_label">Style</string>

    <string-array name="font_labels" translatable="false">
        <item>Roboto-Thin</item>
        <item>Roboto-Bold</item>
        <item>Roboto-Regular</item>
    </string-array>

    <!-- Label for the screen saver activity displayed on-screen when that activity must be represented to the user. -->
    <string name="screensaver_settings">Dream settings</string>
    <!-- Title for check box to pick intensity of display diminuation during dream mode -->
    <string name="night_mode_title">Night mode</string>

    <!-- Description of field showing the next alarm time in the clock page, for accessibility. -->
    <string name="next_alarm_description">Next alarm: <xliff:g id="alarm_time" example="Wed 8:00am">%s</xliff:g></string>

    <!--  -->

    <string name="notification_icons">Notification icons</string>
    <string name="show_unread_gmail_icon" tools:ignore="UnusedResources">Show unread Gmail icon</string>
    <string name="gmail" tools:ignore="UnusedResources">Gmail</string>
    <string name="show_unread_texts_icon" tools:ignore="UnusedResources">Show unread texts icon</string>
    <string name="sms" tools:ignore="UnusedResources">SMS</string>
    <string name="show_missed_calls_icon" tools:ignore="UnusedResources">Show missed calls icon</string>
    <string name="calls" tools:ignore="UnusedResources">Calls</string>
    <string name="hide_this_app_from_the_launcher">Hide this app from the launcher</string>
    <string name="hide_icon">Hide icon</string>
    <string name="about">About</string>
    <string name="restart_required">You may need to restart the launcher or reboot the device in order for this action to take effect</string>
    <string name="action_not_available_in_this_android">This action is not available on this version of Android</string>
     <!-- v1.2 -->
    <string name="battery_full">Charged</string>
    <string name="battery_charging">Charging</string>
    <string name="battery_status_summary">Show battery status</string>
    <string name="battery_status">Battery status</string>
    <string name="slide_effect_summary">Will slide the clock on screen. Otherwise will disappear and reappear at different places.</string>
    <string name="slide_effect">Use slide effect</string>
    <string name="adjust_brightness">Adjust brightness</string>
    <string name="adjust_background_brightness">Adjust brightness</string>
    <string name="background_brightness">Background Brightness</string>
    <string name="brightness">Brightness</string>
    <string name="min_brightness_fine_adj">Minimal brightness</string>
    <string name="min_brightness_fine_adj_summary">Enforce a minimal brightness in automatic brightness mode</string>
    <string name="auto_brightness_fine_adj">Fine adjust brightness</string>
    <string name="auto_brightness_fine_adj_summary">Further adjust the brightness in case automatic brightness isn\'t accurate enough</string>
    <string name="show_notif_summary">Show system notification</string>
    <string name="show_notif">System notifications</string>
    <string name="enable_loc_listener_tip">Check Clock time app if you want to see notifications in the daydream</string>
    <string name="force_rotation">Force automatic orientation</string>
    <string name="force_rotation_summary">Always allow landscape mode</string>
    <string name="light_sensor">Automatic brightness</string>
    <string name="light_sensor_summary">Use light sensor to set brightness</string>
    <string name="landscape_bigger">Bigger widescreen</string>
    <string name="landscape_bigger_summary">Clock will show bigger in widescreen mode</string>
    <string name="misc">Misc</string>
</resources>