<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2012 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/app_name">

    <PreferenceCategory android:title="@string/misc">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="orientation"
            android:summary="@string/force_rotation_summary"
            android:title="@string/force_rotation"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="battery"
            android:summary="@string/battery_status_summary"
            android:title="@string/battery_status"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="slide"
            android:summary="@string/slide_effect_summary"
            android:title="@string/slide_effect"/>
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="hide_activity"
            android:summary="@string/hide_this_app_from_the_launcher"
            android:title="@string/hide_icon"/>

        <Preference
            android:key="about"
            android:persistent="false"
            android:selectable="false"
            android:title="@string/about"/>
    </PreferenceCategory>

    <!--<ca.mlaflamme.clocktime.preference.AdmobPreference
        android:key="ad1"
        clockns:adUnitIdString="ca-app-pub-3940256099942544/6300978111"/>-->

</PreferenceScreen>